--- a/Fundamentos/index.html
+++ b/Fundamentos/index.html
@@ -5,18 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portal de nóticias Galáctia</title>
+    <link rel="stylesheet" href="/styles/card.css">
 </head>
 <body>
     <div class="container">
 
         <div class="card">
             <div class="card__left">
-                <span>Bruno Mendonça Gusmão</span>
-                <h1>Darth Vader contrata devs</h1>
+                <span>By Bruno Mendonça Gusmão</span>
+                <h1>Darth Vader Contrata Devs</h1>
                 <p>Darth Vader procura devs que sabem trabalhar com componentes</p>
             </div>
             <div class="card__right">
-                <img src="" alt="">
+                <img src="/assets/darth_vader.jpg" alt="">
 
             </div>
         </div>
