--- a/Fundamentos/index.html
+++ b/Fundamentos/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portal de nóticias Galáctia</title>
     <link rel="stylesheet" href="/styles/card.css">
+    <script src="/src/Components/CardNews.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -23,5 +24,10 @@
         </div>
 
     </div>
+
+    <card-news></card-news>
+    <card-news></card-news>
+    <card-news></card-news>
+    <card-news></card-news>
 </body>
 </html>
