--- a/Fundamentos/index.html
+++ b/Fundamentos/index.html
@@ -7,6 +7,7 @@
     <title>Portal de nóticias Galáctia</title>
     <link rel="stylesheet" href="/styles/card.css">
     <script src="/src/Components/CardNews.js" defer></script>
+    <script src="/src/Components/TituloDinamico.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -27,7 +28,7 @@
 
     <card-news></card-news>
     <card-news></card-news>
-    <card-news></card-news>
-    <card-news></card-news>
+    <titulo-dinamico></titulo-dinamico>
+    <titulo-dinamico></titulo-dinamico>
 </body>
 </html>
