implementando um component e setando as propriedades das classes

--- a/Fundamentos/index.html
+++ b/Fundamentos/index.html
@@ -28,7 +28,7 @@
 
     <card-news></card-news>
     <card-news></card-news>
-    <titulo-dinamico></titulo-dinamico>
-    <titulo-dinamico></titulo-dinamico>
+    <titulo-dinamico titulo="noticia-urgente"></titulo-dinamico>
+    <titulo-dinamico titulo="Novo titulo"></titulo-dinamico>
 </body>
 </html>
