--- a/Fundamentos/index.html
+++ b/Fundamentos/index.html
@@ -10,25 +10,28 @@
     <script src="/src/Components/TituloDinamico.js" defer></script>
 </head>
 <body>
-    <div class="container">
+    <div class="app-root">
 
-        <div class="card">
-            <div class="card__left">
-                <span>By Bruno Mendonça Gusmão</span>
-                <h1>Darth Vader Contrata Devs</h1>
-                <p>Darth Vader procura devs que sabem trabalhar com componentes</p>
-            </div>
-            <div class="card__right">
-                <img src="/assets/darth_vader.jpg" alt="">
 
-            </div>
-        </div>
 
-    </div>
-
-    <card-news></card-news>
-    <card-news></card-news>
+    <card-news 
+        autor="Bruno"
+        title="Darth Vader Contrata"
+        link-url="www.google.com/search"
+        photo="assets/darth_vader.jpg"
+        content="Darth Vader procura devs que sabem trabalhar com componentes"
+    >
+    </card-news>
+    <card-news
+        autor="Bruno"
+        title="Darth Vader Contrata"
+        link-url="www.google.com/search"
+        photo="assets/darth_vader.jpg"
+        content="Darth Vader procura devs que sabem trabalhar com componentes"
+    ></card-news>
     <titulo-dinamico titulo="noticia-urgente"></titulo-dinamico>
     <titulo-dinamico titulo="Novo titulo"></titulo-dinamico>
+    
+</div>
 </body>
 </html>
